<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    >

    <TextView
        android:id="@+id/txt_titol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/blanc"
        android:textSize="35sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_titol"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="@color/blanc"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <EditText
                android:id="@+id/txt_nom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/login_email"/>

            <EditText
                android:id="@+id/txt_cognoms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:singleLine="true"
                android:hint="@string/login_password"
                android:ems="10"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/btn_entrar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="@color/colorPrimary"
                android:text="@string/action_sign_in"
                android:textColor="@color/blanc"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btn_foto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/txt_titol"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_foto_perfil_background"
        android:elevation="4dp"
        android:src="@drawable/ic_camera" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_perfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/txt_titol"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_foto_perfil_background"
        android:elevation="4dp"
        android:src="@drawable/ic_camera"
        android:visibility="invisible"/>
</RelativeLayout>
